# sqlite3

./: .gitignore  BUILD.bat  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.proj  cpm.json  sqlite3.sln
.github/workflows/: build.yml
include/sqlite3/: PLACEHOLDER.H
src/: cli.vcxproj  dll.vcxproj  lib.vcxproj
